--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 
 @theme {
   --container-8xl: 102rem;
+
+  --color-brand-600: #c8102e;
+  --color-brand-700: #a80d26;
+  --color-brand-800: #880a1f;
 }
 
 body {
